--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build": "npm run prebuild && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start --debug",
     "start:dev": "BASIC_AUTH_VALIDATOR=https://gitlab.com/oauth/token API_FOR_ACCESS_TEST=https://gitlab.com/api/v4/projects/12480981/members nest start --watch",
