--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "npm run prebuild && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start --debug",
-    "start:dev": "BASIC_AUTH_VALIDATOR=https://gitlab.com/oauth/token API_FOR_ACCESS_TEST=https://gitlab.com/api/v4/projects/12480981/members nest start --watch",
+    "start:dev": "PORT=3001 BASIC_AUTH_VALIDATOR=https://gitlab.com/oauth/token API_FOR_ACCESS_TEST=https://gitlab.com/api/v4/projects/12480981/members DEFAULT_USERNAME=proto DEFAULT_PASSWORD=proto nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
